--- a/webcompat/static/css/src/issue-wizard.css
+++ b/webcompat/static/css/src/issue-wizard.css
@@ -306,6 +306,10 @@
   z-index: 2;
 }
 
+.row.mobile-col {
+  flex-direction: column;
+}
+
 .row.centered {
   justify-content: center;
   margin: 0 auto;
